--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "BioCircos"]
+	path = BioCircos
+	url = https://github.com/lvulliard/biocircos.r
+	shallow = true
+	registered = true
